# visualizer

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/: note.md
apps/agent/: .env.example  agent.py  constants.py  prompts.py  pyproject.toml  requirements.txt  websearch.py
apps/backend/: Dockerfile  agent_client.py  app.py  config.py  docker-compose.yml  dump.rdb  nova_runner.py  pyproject.toml  session_manager.py  ws_handler.py
apps/backend/config/: config.py  constants.py  logging.py
apps/backend/core/: nova_runner.py  ws_handler.py
apps/backend/services/: agent_client.py  session_manager.py
apps/frontend/: jsconfig.json  next.config.mjs
apps/frontend/app/: layout.js  page.js
apps/frontend/app/search/: page.js
apps/frontend/app/tts-test/: page.js
apps/frontend/components/: SearchBar.js  VideoPanel.js
apps/frontend/styles/: globals.css
apps/frontend/utils/: TextToSpeech.js
