[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "boto3>=1.42.66",
    "fastapi>=0.135.1",
    "nova-act>=3.1.263.0",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
